removed conclusion TODO in writeup

--- a/writeup/writeup.tex
+++ b/writeup/writeup.tex
@@ -241,7 +241,11 @@ allow user input, random number generators, or similar, the semantics of
 our debugger could be violated.
 
 \section{Conclusions}
-TODO MG
+We think Hindsight, or Historical, debugging is a step in the right
+direction towards greater programmer productivity through execution
+introspecition.  The existance of a commercial tool in Visual Studio
+that does this is evident that it is feasible for large programs
+despite the large memory footprint.
 
 Finally, if you are interested in seeing the details of our
 implementation, our code is available to be viewed on Github at
